# ETF_data

./: .env.example  .gitignore  GUIDE.md  README.md  pyproject.toml  requirements.txt  test_backfill.py
bridge/: data_bridge.py
config/: amazingdata_pipeline.yaml  etf_data_config.yaml  pipeline_tasks.yaml  sources.yaml  symbols.yaml  tushare.yaml
etf_data/amazingdata/: README.md  __init__.py  client.py  config.py  fetcher.py  pipeline.py  storage.py
etf_data/api/: __init__.py  server.py
etf_data/bridge/: README.md  __init__.py  data_bridge.py
etf_data/comparator/: __init__.py  diff_engine.py  report.py
etf_data/fetchers/: __init__.py  akshare_extra_fetcher.py  akshare_fetcher.py  amazingdata_fetcher.py  baostock_fetcher.py  tencent_fetcher.py  tushare_fetcher.py
etf_data/pipeline/: __init__.py  notify.py  post_pipeline.py  run.py  validators.py
etf_data/quality/: __init__.py  check.py  dashboard.py  portfolio.py
etf_data/scheduler/: __init__.py  backfill.py  daily_update.py
etf_data/storage/: parquet_storage.py  sqlserver_storage.py
etf_data/utils/: __init__.py  calendar.py  config_helper.py
scripts/: generate_test_data.py  register_cron.sh
src/: __init__.py
src/amazingdata/: pipeline.py
src/api/: server.py
src/comparator/: diff_engine.py  report.py
src/fetchers/: base.py  tushare_fetcher.py
src/pipeline/: __init__.py  notify.py  post_pipeline.py  run.py
src/quality/: check.py  dashboard.py  portfolio.py
src/scheduler/: backfill.py  daily_update.py
src/storage/: __init__.py  base.py  sqlserver_storage.py
src/utils/: calendar.py
